pkg/cmd/ingress/test_data/tls/expected/namespaces/myapps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: myapps
  labels:
    chart: "myservice-0.0.12"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: myservice-myservice
